# pgm-cnc-utilities

./: .gitignore  Candle-1.1.7-pgm-settings.ini  README.md  Software.md
candle-settings/Candle_1.2.14b_x64-config/: settings.ini
candle-settings/Candle_1.2.14b_x64-config/plugins/camera/: settings.ini
candle-settings/Candle_1.2.14b_x64-config/plugins/usercommands/: settings.ini
doc/: grbl-config.md
post-artcam/: 00-GenericTextmm.con  00-grbl_arc_mm.con  01-Biesse_Rover_B435_Ferrao.con
post-artcam/ToolDB/: PGM_ToolDB.tdb
post-fusion/: pgm-grbl.cps
v_carve_optimizer/: pyproject.toml
v_carve_optimizer/tests/: test_v_carve_optimizer.py
v_carve_optimizer/v_carve_optimizer/: vector.py
