[tool.poetry]
name = "v_carve_optimizer"
version = "0.1.0"
description = ""
authors = ["Pelayo Gonzalez <pelayo.gonzalez@bezzier.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygcode = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
