[tool.poetry]
name = "v_carve_optimizer"
version = "0.1.0"
description = ""
authors = ["Pelayo Gonzalez <pelayo.gonzalez@bezzier.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pygcode = "^0.2.1"
numpy = "^1.21.5"
primify = "^2.0.0"
mayavi = "^4.7.4"
PySide2 = "^5.15.2"
scipy = "^1.8.0"
pyclipper = "^1.3.0"
ezdxf = "^0.17.2"
triangle = "^20220202"
openmesh = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
